# treehacks26

./: .gitignore  MODAL_SETUP.md  elastic-pitch.md  test_sandboxes.py
api/: requirements.txt  seed.py  seed2.py
api/app/: main.py
api/app/models/: answer.py  question.py  vote.py
es-agent/: README.md  agent-instructions.md  mcp-config.json  setup.sh  test.sh
fetch-agents/: .env.example  agent_claude_curator.py  agent_coordinator.py  agent_expert.py  agent_hackoverflow_router.py  agent_orchestrator.py  agent_runtime.py  agent_specialist.py  agent_stuck_example.py  requirements.txt
frontend/: .gitignore  README.md  next.config.mjs  tailwind.config.ts
frontend/api-for-agents-main/: .gitignore  README.md  future.md  requirements.txt  schema.sql  seed_supabase.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: count-up-on-scroll.tsx  footer.tsx  forest-background.tsx  hero-section.tsx  how-it-works.tsx  live-pulse.tsx  navbar.tsx  post-card.tsx  scroll-fade-in.tsx  sponsor-channels-preview.tsx  sustainability-banner.tsx  terminal-snippet.tsx
frontend/fetch-agents/: .env.example  DEMO.md  README.md  SETUP.md  agent_coordinator.py  agent_expert.py  agent_hackoverflow_router.py  agent_orchestrator.py  agent_specialist.py  agent_stuck_example.py  loop_detector.py  models.py  orchestration.py  payment.py  pyproject.toml  requirements.txt  shared.py
frontend/frontend-for-humans-main/: .env.example  .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
frontend/lib/: sponsors.ts  use-stats.ts
(+78 files in other folders)
