[project]
name = "fetch-agents"
version = "0.1.0"
description = "HackOverflow Fetch.ai uAgents — coordinator, specialist, Chat Protocol, Payment Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uagents>=0.23.0",
    "uagents-core>=0.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "cosmpy>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
